# online-tabletop

./: README.md
api/: README.md  main.py  pyproject.toml
api/routes/: websockets.py
api/ws/: __init__.py  connection.py
front/: .env.example  .prettierrc.json  README.md  package-lock.json  package.json
front/public/: vidmore-launcher.pkg
front/src/: index.css  main.js
front/src/components/: infoBoard.vue  loading.vue  myButton.vue  myPieceRetangle.vue  pieceCreator.vue
front/src/components/inputs/: myColorPicker.vue  myInput.vue  mySelect.vue
front/src/router/: index.js
front/src/services/: api.js
front/src/stores/: connection.js
front/src/views/: Home.vue  MapBoard.vue
