[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Miguel Jesus <miguelangelolealjesus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
websockets = "^11.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
